RESOLVED FIXED96858
JSC: Windows port needs a proper JSLock implementation
https://bugs.webkit.org/show_bug.cgi?id=96858
Summary JSC: Windows port needs a proper JSLock implementation
Mark Lam
Reported 2012-09-15 01:07:24 PDT
Currently, the JSLock methods are implemented for platforms that support pthreads. As a result, the Windows port is only using a stub JSLock that does nothing. This stub implementation causes ASSERT(!m_apiLock.currentThreadIsHoldingLock()) (in JSGlobalData::~JSGlobalData()) to always fail. In addition, the stub JSLock implementation does not provide the needed synchronization, and as a result, the Windows port crashes or fails in intermittent ways when running the layout tests.
Attachments
Fix. (5.23 KB, patch)
2012-09-15 22:25 PDT, Mark Lam
fpizlo: review+
Mark Lam
Comment 1 2012-09-15 01:09:11 PDT
Mark Lam
Comment 2 2012-09-15 22:25:32 PDT
Mark Lam
Comment 3 2012-09-15 23:31:43 PDT
Note You need to log in before you can comment on or make changes to this bug.