Fixed JSLock to use the platform abstraction for Mutex instead of depending on pthreads. https://bugs.webkit.org/show_bug.cgi?id=96858.

Reviewed by Filip Pizlo.

This fixes a synchronization problem on the Windows port and makes
it more reliable when running the layout tests.

* runtime/InitializeThreading.cpp:
(JSC::initializeThreadingOnce):
* runtime/JSLock.cpp:
(JSC):
(JSC::GlobalJSLock::GlobalJSLock):
(JSC::GlobalJSLock::~GlobalJSLock):
(JSC::GlobalJSLock::initialize):
* runtime/JSLock.h:
(GlobalJSLock):
(JSLock):



Canonical link: https://commits.webkit.org/114790@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128704 268f45cc-cd09-0410-ab3c-d52691b4dbfc