Source/JavaScriptCore/runtime/InitializeThreading.cpp
@@ -35,6 +35,7 @@
 #include "Identifier.h"
 #include "JSDateMath.h"
 #include "JSGlobalObject.h"
+#include "JSLock.h"
 #include "LLIntData.h"
 #include "WriteBarrier.h"
 #include <wtf/dtoa.h>
@@ -53,6 +54,7 @@ static void initializeThreadingOnce()
 {
     WTF::double_conversion::initialize();
     WTF::initializeThreading();
+    GlobalJSLock::initialize();
     Options::initialize();
 #if ENABLE(WRITE_BARRIER_PROFILING)
     WriteBarrierCounters::initialize();
